@@ -1911,6 +1911,14 @@ It copies decoded video frame to system RAM, so it can be slow!</source>
         <source>&amp;Playlist repeating</source>
         <translation>Bucle de &amp;lista de reproducción</translation>
     </message>
+    <message>
+        <source>Random and &amp;repeat</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Random in group and repea&amp;t</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>ResultsPleer</name>
